Some restructuring and more tests